# ydb-topic-deduction-trouble-example

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json
cmake/: get_cpm.cmake
src/: main.cpp
